# infx-semantic-normalization-api

./: .gitignore  Dockerfile  README.md  docker-compose.yml  pull_request_template.md  pyproject.toml  sonar-project.properties
.github/workflows/: cicd.yml
infx_mapping/app/: app.py
infx_mapping_api/: __main__.py  app.py
infx_semantic_normalization_api/: __main__.py  app.py
infx_semantic_normalization_api/management/: management_models.py  management_views.py
infx_semantic_normalization_api/mapping/: mapping_models.py  mapping_views.py
infx_semantic_normalization_database/: Dockerfile  README.md
infx_semantic_normalization_database/changelog/: changelog-main.yaml
test/: conftest.py  test_ping.py
test/management/: test_management_models.py  test_management_views.py
test/mapping/: test_mapping_models.py  test_mapping_views.py
