[tool.poetry]
name = "infx-mapping-api"
version = "0.0.1"
description = "INFX Mapping Service"
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
flask = "^3.0.1"
waitress = "^2.1.2"


[[tool.poetry.source]]
name = "internal_pypi"
url = "https://repo.devops.projectronin.io/repository/pypi/simple/"
priority = "explicit"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
